build_output_2.txt
[1/32] Building CXX object CMakeFiles/rme.dir/source/ui/replace_tool/card_panel.cpp.o
[2/32] Building CXX object CMakeFiles/rme.dir/source/ui/replace_tool/rule_list_control.cpp.o
FAILED: CMakeFiles/rme.dir/source/ui/replace_tool/rule_list_control.cpp.o
/usr/bin/c++ -DBOOST_ATOMIC_DYN_LINK -DBOOST_ATOMIC_NO_LIB -DBOOST_SYSTEM_DYN_LINK -DBOOST_SYSTEM_NO_LIB -DBOOST_THREAD_DYN_LINK -DBOOST_THREAD_NO_LIB -DFMT_SHARED -DNANOVG_GL3 -DSPDLOG_COMPILED_LIB -DSPDLOG_FMT_EXTERNAL -DSPDLOG_SHARED_LIB -DUNICODE="" -DWXUSINGDLL -DWXWIN_COMPATIBILITY_3_3 -D_FILE_OFFSET_BITS=64 -D_UNICODE="" -D__WXGTK__ -I/app/build_conan/build/Release/_deps/wxmaterialdesignartprovider-src -I/app/source -I/app/ext/nanovg/src -isystem /usr/lib/x86_64-linux-gnu/wx/include/gtk3-unicode-3.2 -isystem /usr/include/wx-3.2 -isystem /home/jules/.conan2/p/b/glad434481e345f8d/p/include -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable -Wno-deprecated-declarations -Wno-overloaded-virtual -Wno-strict-aliasing -Wno-sign-compare -Wno-unused-function -Wunused-result -pthread -O3 -DNDEBUG -std=gnu++20 -pthread -MD -MT CMakeFiles/rme.dir/source/ui/replace_tool/rule_list_control.cpp.o -MF CMakeFiles/rme.dir/source/ui/replace_tool/rule_list_control.cpp.o.d -o CMakeFiles/rme.dir/source/ui/replace_tool/rule_list_control.cpp.o -c /app/source/ui/replace_tool/rule_list_control.cpp
/app/source/ui/replace_tool/rule_list_control.cpp: In member function ‘void RuleListControl::OnPaint(wxPaintEvent&)’:
/app/source/ui/replace_tool/rule_list_control.cpp:58:14: error: ‘unique_ptr’ is not a member of ‘std’
   58 |         std::unique_ptr<wxGraphicsContext> gc(wxGraphicsContext::Create(dc));
      |              ^~~~~~~~~~
/app/source/ui/replace_tool/rule_list_control.cpp:5:1: note: ‘std::unique_ptr’ is defined in header ‘<memory>’; did you forget to ‘#include <memory>’?
    4 | #include <wx/graphics.h>
  +++ |+#include <memory>
    5 |
/app/source/ui/replace_tool/rule_list_control.cpp:58:42: error: expected primary-expression before ‘>’ token
   58 |         std::unique_ptr<wxGraphicsContext> gc(wxGraphicsContext::Create(dc));
      |                                          ^
/app/source/ui/replace_tool/rule_list_control.cpp:58:44: error: ‘gc’ was not declared in this scope; did you mean ‘dc’?
   58 |         std::unique_ptr<wxGraphicsContext> gc(wxGraphicsContext::Create(dc));
      |                                            ^~
      |                                            dc
[3/32] Building CXX object CMakeFiles/rme.dir/source/ui/replace_tool/replacement_engine.cpp.o
In file included from /app/source/map/map.h:26,
                 from /app/source/editor/editor.h:24,
                 from /app/source/ui/replace_tool/replacement_engine.cpp:39:
/app/source/game/complexitem.h:183:9: warning: type qualifiers ignored on function return type [-Wignored-qualifiers]
  183 |         const uint8_t getDirection() {
      |         ^~~~~
[4/32] Building CXX object CMakeFiles/rme.dir/source/ui/replace_tool/rule_builder_panel.cpp.o
[5/32] Building CXX object CMakeFiles/rme.dir/source/ui/replace_tool/replace_tool_window.cpp.o
In file included from /app/source/map/map.h:26,
                 from /app/source/editor/editor.h:24,
                 from /app/source/ui/replace_tool/replace_tool_window.cpp:5:
/app/source/game/complexitem.h:183:9: warning: type qualifiers ignored on function return type [-Wignored-qualifiers]
  183 |         const uint8_t getDirection() {
      |         ^~~~~
ninja: build stopped: subcommand failed.
